--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,7 +37,7 @@
             <form th:object="${insertRecord}" method="POST">
                 <div class="form-group">
                     <label for="data">Record to insert</label>
-                    <input id="data" type="text" class="form-control" placeholder="Lorem ipsum" th:field="*{data}" />
+                    <input id="data" type="text" class="form-control" placeholder="Lorem ipsum" th:field="*{symbol}" />
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
@@ -55,7 +55,7 @@
                 </thead>
                 <tbody>
                     <tr th:each="record : ${records}">
-                        <td th:text="${record.data}">Some text</td>
+                        <td th:text="${record.symbol}">Some text</td>
                     </tr>
                 </tbody>
             </table>
